--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,15 +1,47 @@
 name: Build and Publish Docker Image
 
 on:
+  push:
+   # In case branches are also ignored
+   # branches:
+   #   - "**"
+    tags-ignore:
+      - '**'
   release:
     types: [published, prereleased]
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v3
+        with:
+          registry: https://ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract version from release tag
+        id: get_version
+        run: echo "version=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
+
+      - name: Lowercase repo name
+        run: |
+          echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+
+      - name: Determine tags
+        id: docker_tags
+        run: |
+          TAGS="${{ github.ref_name }}/${{ env.REPO }}:${{ steps.get_version.outputs.version }},${{ github.ref_name }}/${{ env.REPO }}:latest"
+          if [[ "${{ github.event.action }}" == "released" ]]; then
+            TAGS="$TAGS,${{ github.ref_name }}/${{ env.REPO }}:stable"
+          fi
+          echo "tags=$TAGS" >> $GITHUB_OUTPUT
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -17,27 +49,8 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Extract version from release tag
-        id: get_version
-        run: echo "version=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
-
-      - name: Determine tags
-        id: docker_tags
-        run: |
-          TAGS="yourdockerhubuser/tic2mqtt:${{ steps.get_version.outputs.version }},yourdockerhubuser/tic2mqtt:latest"
-          if [[ "${{ github.event.release.prerelease }}" == "false" ]]; then
-            TAGS="$TAGS,yourdockerhubuser/tic2mqtt:stable"
-          fi
-          echo "tags=$TAGS" >> $GITHUB_OUTPUT
-
       - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
