--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
     tags-ignore:
       - '**'
   release:
-    types: [published, prereleased]
+    types: [released, prereleased]
 
 jobs:
   build-and-push:
