--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,8 @@ name: Build and Publish Docker Image
 
 on:
   push:
-   # In case branches are also ignored
-   # branches:
-   #   - "**"
+    branches:
+      - "**"
     tags-ignore:
       - '**'
   release:
@@ -54,7 +53,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: true
+          push: ${{ github.event.action == 'released' || github.event.action == 'prereleased' }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           tags: ${{ steps.docker_tags.outputs.tags }}
           labels: |
