--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "tic2mqtt"
-version = "0.1.0"
-edition = "2021"
+version = "0.0.0-ci"
 
 [dependencies]
 tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "signal", "io-std"] }
